# skl-the

./: .gitignore  README.md  docker-compose.yml  go.mod  go.sum
conf/: parkings.json
grafana/provisioning/dashboards/: parking-recorder.json
prometheus/: prometheus.yml
services/entrance-notifier/: main.go
services/exit-notifier/: main.go
services/parkings-recorder/: main.go
services/parkings-storage/: parkings_storage.py  pyproject.toml
shared/: events.go  log.go  rmq.go
